[package]
name = "gds2_io"
version = "0.2.1"
edition = "2021"
keywords = ["parser","science","gds","eda"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "gds2 IO utils"
repository = "https://github.com/erihsu/gds2-io"
exclude = [
	"testcases/*",
	"tests/*",
]


[dependencies]
nom = "7.0"
byteorder = "1.4.3"
thiserror = "1.0"


